fixed table disappearing on mobile

--- a/app/css/_common.css.scss
+++ b/app/css/_common.css.scss
@@ -9,3 +9,9 @@ input[type="text"].huge{
 h2.huge{
   font-size:3.2em;
 }
+
+@media (max-width: 767px) {
+  .table {
+    display: block;
+  }
+}
